web-app/css/main.css
/* ... */
.dialog-btn {
    box-sizing: border-box;
    display: table-cell;
    text-align: center;
    vertical-align: middle;
    font-size: 18px;
    overflow: auto;
    border-style: none;
    background: white;
    color: #206E9F;
    line-height: normal;
    padding: 1em;
}


.desktop-save .lbl-text {
    width: 98%;
    display: inline-block\9; /* \9 hack - make this IE only */
    line-height: 20px;
}

.one-btn-layout {
    width: 100%;
}

.two-btn-layout {
    width: 50%;
}

.cancel-btn {
    border-top: 1px solid #869FB1;
    border-bottom-left-radius: 6px;
}

.cancel-btn.one-btn-layout {
    width: 0px;
    display: none;
}

.save-btn {
    border-top: 1px solid #206E9F;
    background: #206E9F;
    color: white;
    box-shadow: 0px -4px #0C5482 inset;
}

.save-btn[disabled] {
    color: #869FB1;
}

.buttons-desktop-save {
    padding: 0.5em 1.75em 0.5em 0em;

    /* IE 10 flex */
    display: -ms-flexbox;

    display: flex;
}

.buttons-desktop-save .save-btn {
    color: #fff;
    background-color: #428bca;
    border-color: #357ebd;
    padding: 0.438em 1.5em;
    float: right;
    margin: 0em 0em 0em 0.625em;
}

.buttons-desktop-save .save-btn[disabled] {
    color: #C6DFF1;
    opacity: 0.65;
}

.mid-dash {
    float: left;
    width: 100%;
    border-left: 1px solid rgb(0, 0, 0);
    padding: 0.25em 1em;
    margin: 0.75em 0em;
}

.text-input-field:disabled {
    background-color: #F1F4F6;
}


/************************/
/* Person Detail Layout */
/************************/

.overview-line {
    margin-top: 15px;
}

.overview-line.email,
.overview-line.addr {
    word-break: break-all;
}

.overview-line.addr > .pi-icon-align {
    color: #206E9F;
}

.overview-name {
    font-size: 1.5em;
}

.pi-profile-image {
    vertical-align: middle;
}

.pi-profile-image > svg {
    width: 132px;
    height: 160px;
}

.details-wrapper {
    overflow: hidden;
}

.details-section {
    margin: 15px 0;
    padding: 15px 15px 0px 15px;
    border-bottom: 4px solid #ddd;
    overflow: hidden;
    background: white;
}

.details-section.overview {
    float: left;
    width: 280px;
    padding-bottom: 15px;
    margin-right: 15px;
    text-align: center;
}

.details-section-heading {
    float: left;
}

.details-section-heading > h2 {
    font-size: 16px;
    font-weight: bold;
    margin: 0;
}

.pi-title-divider,
.pi-overview-divider {
    width: 50px;
    height: 1px;
}

.pi-overview-divider {
    margin-left: auto;
    margin-right: auto;
}

.pi-title-divider span,
.pi-overview-divider span {
    border-bottom: 1px solid #BEC5CB;
    width: 100%;
    float: left;
    margin-bottom: 0.675em;
}

.pi-title-divider span {
    margin-top: 1.0em;
}

.disability-status .pi-title-divider {
    width: 70px;
}

.disability-status .pi-title-divider span {
    border-bottom: 1px solid #4F585F;
    margin-bottom: 0.25em;
}

.pi-overview-divider span {
    margin-top: 1.5em;
}

.overview-divider-spacer {
    height: 25px;
}

.details-section-edit {
    float: right;
}

.address-delete-checkbox {
    float: left;
    padding-right: 8px;
}

.address-detail,
.emergency-contact-detail,
.addtl-details-detail {
    float: left;
}

.email-detail {
    float: left;
    width: 100%;
    word-break: break-all;
}

.email-detail > div:first-child,
.addtl-details-detail > div:first-child {
    padding-bottom: 0.25em;
}

.addtl-details-detail.ethn-race-wrapper {
    float: none;
    word-wrap: break-word;
}

.item-wrapper,
.emergency-contact-wrapper {
    float: left;
    padding-bottom: 15px;
}

.address-type-view {
    font-weight: bold;
    padding-bottom: 0.25em;
}

.addr-time-period {
    color: #7E858B;
}

.address-date-range {
    float: left;
}

.address-zip {
    padding-left: 10px;
}

.address-last-line {
    float: left;
}

a.delete-address-link {
    padding-left: 15px;
    color: #333;
    text-decoration: none;
    cursor: pointer;
}

.delete-address-link [class^="icon-"] {
    font-size: 18px;
}

.delete-address-link.disabled {
    cursor: not-allowed;
    color: #A0A3A4;
}

.phone-type-view {
    font-weight: bold;
    padding-bottom: 4px;
    float: left;
}

.phone-number-view {
    padding-bottom: 4px;
}

.phone-number-wrapper {
    padding-bottom: 15px;
}

.unlisted {
    padding: 0 5px;
}

span.priority-dot,
span.id-label {
    margin-right: 5px;
}

.pi-phone-num-lbl {
    padding-bottom: 0px;
}

.pi-phone-ctry {
    margin-top: 0.5em;
    width: 30%;
    min-width: 10em;
    display: inline-block;
}

.pi-phone-area {
    margin-top: 0.5em;
    width: 30%;
    min-width: 10em;
}

.pi-phone-num {
    margin-top: 0.5em;
    width: 35%;
    min-width: 10em;
}

.pi-phone-extn {
    margin-top: 0.5em;
    width: 23%;
}

.pi-emer-phone-field {
    margin-top: 0.5em;
}

/* Icons */
.details-section-edit-link,
a:hover.details-section-edit-link,
a:focus.details-section-edit-link {
    color: #333;
    cursor: pointer;
    text-decoration: none;
}

.details-section-edit-link .icon-edit {
    font-size: 14px;
}

button.delete-btn {
    background: transparent;
    border: none;
    padding-top: 8px;
    padding-left: 9px;
}

path#Phone-Icon-2 {
    stroke: #206E9F;
}

path#Shape-Copy-Copy-4 {
    fill: #206E9F;
}

button.delete-btn:focus {
    outline: 1px dotted #333;
}

.phone-icon {
    width: 24px;
    height: 24px;
    margin-right: 8px;
    display: inline-block;
    vertical-align: middle;
}

path#Path {
    fill: #206E9F;
}

.pi-icon {
    font-size: 24px;
    text-decoration: none;
    margin-right: 8px;
    vertical-align: middle;
}

.pi-icon-align {
    display: inline-block;
}
.pad-wordy-modal {
    padding: 0px 15px;
}

.clip-disability-text,
.clip-vet-text {
    height: 192px;
    overflow-y: hidden;
    clear: right;
}

.form-id-item {
    padding-top: 0px;
    padding-bottom: 0px;
    padding-left: 15px;
    margin-top: 0px;
    margin-bottom: 0px;
    text-align: right;
    clear: right;
    font-size: 12px;
    display: inline;
    float: right;
}
/* ... */

